--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">
-</head>
-<body>
-    <div class="container my-3">
+<html layout:decorate="~{layout}">
+    <div layout:fragment="content" class="container my-3">
         <table class="table">
             <thead class="table-dark">
                 <tr>
@@ -28,5 +20,4 @@
             </tbody>
         </table>
     </div>
-</body>
 </html>
