--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,6 +8,14 @@
     <title>Hello, sbb!</title>
 </head>
 <body>
+    <!-- 내비게이션 바 -->
+    <nav th:replace="~{navbar :: navbarFragment}"></nav>
+
+
+    <!-- 기본 템플릿 안에 삽입될 내용 START -->
     <th:block layout:fragment="content"></th:block>   
+    <!-- 기본 템플릿 안에 삽입될 내용 END -->
+
+    <script th:src="@{/bootstrap.min.js}"></script>
 </body>
 </html>
