--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -17,5 +17,7 @@
     <!-- 기본 템플릿 안에 삽입될 내용 END -->
 
     <script th:src="@{/bootstrap.min.js}"></script>
+
+    <th:block layout:fragment="script"></th:block>
 </body>
 </html>
