--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -18,6 +18,11 @@
                     </div>
                 </div>
                 <div class="my-3">
+                    <a href="javascript:void(0);" th:data-uri="@{|/question/vote/${question.id}|}"
+                        class="recommend btn btn-sm btn-outline-secondary">
+                        추천
+                        <span class="badge rounded-pill bg-success" th:text="${#lists.size(question.voter)}"></span>
+                    </a>
                     <a th:href="@{|/question/modify/${question.id}|}" class="btn btn-sm btn-outline-secondary"
                         sec:authorize="isAuthenticated()"
                         th:if="${question.author != null and #authentication.getPrincipal().getUsername() == question.author.username}"
@@ -53,6 +58,11 @@
                     </div>
                 </div>
                 <div class="my-3">
+                    <a href="javascript:void(0);" th:data-uri="@{|/answer/vote/${answer.id}|}"
+                        class="recommend btn btn-sm btn-outline-secondary">
+                        추천
+                        <span class="badge rounded-pill bg-success" th:text="${#lists.size(answer.voter)}"></span>
+                    </a>
                     <a th:href="@{|/answer/modify/${answer.id}|}" class="btn btn-sm btn-outline-secondary"
                         sec:authorize="isAuthenticated()"
                         th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
@@ -83,6 +93,16 @@
         Array.from(delete_elements).forEach((element)=>{
             element.addEventListener("click", ()=>{
                 if(confirm("정말로 삭제하시겠습니까?")){
+                    location.href = element.dataset.uri;
+                }
+            });
+        });
+
+
+        const recommend_elements = document.getElementsByClassName("recommend");
+        Array.from(recommend_elements).forEach((element)=>{
+            element.addEventListener("click", ()=>{
+                if(confirm("정말로 추천하시겠습니까?")){
                     location.href = element.dataset.uri;
                 }
             });
